; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_frame_rate_option_add.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-properties.c_obs_property_frame_rate_option_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame_rate_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.frame_rate_option = type { i8*, i8* }

@OBS_PROPERTY_FRAME_RATE = common dso_local global i32 0, align 4
@DARRAY_INVALID = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @obs_property_frame_rate_option_add(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.frame_rate_data*, align 8
  %9 = alloca %struct.frame_rate_option*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32, i32* @OBS_PROPERTY_FRAME_RATE, align 4
  %12 = call %struct.frame_rate_data* @get_type_data(i32* %10, i32 %11)
  store %struct.frame_rate_data* %12, %struct.frame_rate_data** %8, align 8
  %13 = load %struct.frame_rate_data*, %struct.frame_rate_data** %8, align 8
  %14 = icmp ne %struct.frame_rate_data* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %3
  %16 = load i64, i64* @DARRAY_INVALID, align 8
  store i64 %16, i64* %4, align 8
  br label %36

17:                                               ; preds = %3
  %18 = load %struct.frame_rate_data*, %struct.frame_rate_data** %8, align 8
  %19 = getelementptr inbounds %struct.frame_rate_data, %struct.frame_rate_data* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call %struct.frame_rate_option* @da_push_back_new(i64 %21)
  store %struct.frame_rate_option* %22, %struct.frame_rate_option** %9, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = call i8* @bstrdup(i8* %23)
  %25 = load %struct.frame_rate_option*, %struct.frame_rate_option** %9, align 8
  %26 = getelementptr inbounds %struct.frame_rate_option, %struct.frame_rate_option* %25, i32 0, i32 1
  store i8* %24, i8** %26, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i8* @bstrdup(i8* %27)
  %29 = load %struct.frame_rate_option*, %struct.frame_rate_option** %9, align 8
  %30 = getelementptr inbounds %struct.frame_rate_option, %struct.frame_rate_option* %29, i32 0, i32 0
  store i8* %28, i8** %30, align 8
  %31 = load %struct.frame_rate_data*, %struct.frame_rate_data** %8, align 8
  %32 = getelementptr inbounds %struct.frame_rate_data, %struct.frame_rate_data* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = sub i64 %34, 1
  store i64 %35, i64* %4, align 8
  br label %36

36:                                               ; preds = %17, %15
  %37 = load i64, i64* %4, align 8
  ret i64 %37
}

declare dso_local %struct.frame_rate_data* @get_type_data(i32*, i32) #1

declare dso_local %struct.frame_rate_option* @da_push_back_new(i64) #1

declare dso_local i8* @bstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
